# router/router.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/guimaraaes/golang_fiber_with_neo4j/handler"
+	"github.com/guimaraaes/golang_fiber_with_neo4j/repository_algorithms"
 )
 
 func Routes(app *fiber.App) {
@@ -30,8 +31,14 @@ func Routes(app *fiber.App) {
 	app.Get("/person/:name/:born", handler.GetPersonId)
 	app.Post("/person", handler.PostPerson)
 	app.Post("/person_with_relationship", handler.PostPersonWithRelationship)
+	app.Post("/GETperson_with_relationship", handler.GetPersonRel)
 	app.Put("/person/:name/:born", handler.PutPerson)
 	app.Delete("/person/:name/:born", handler.DeletePerson)
 
-	//Cities
+	//algorithms
+	app.Get("/algo_centrality/:node/:relationship", repository_algorithms.Centrality)
+	app.Get("/algo_community/:node/:relationship", repository_algorithms.Community)
+	app.Get("/algo_path/:node/:relationship", repository_algorithms.Path)
+	app.Get("/algo_pagerank/:node/:relationship", repository_algorithms.PageRank)
+
 }
